syntax = "proto3";

package calculator;

option go_package="github.com/n4ze3m/grpc-calculator/calculator";


message Calculator {
    int64 lhs = 1;
    string operator = 2;
    int64 rhs = 3;
};

message CalculatorRequest {
    Calculator calculator = 1;
};

message CalculatorResponse {
    int64 result = 1;
};

message MultiplicationRequest {
    int64 number = 1;
};

message MultiplicationResponse {
    string result = 1;
};

message AverageRequest {
    int64 number = 1;
}

message AverageResponse {
    int64 result = 1;
}


service CalculatorService {
    rpc Calculate(CalculatorRequest) returns (CalculatorResponse) {}
    rpc Multiply(MultiplicationRequest) returns (stream MultiplicationResponse) {}
    rpc Average(stream AverageRequest) returns (AverageResponse) {}
}